bin/tests/snapshots/collapsible_let_in__2e638014232f7dec2606c940ad2e97f6_lint.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = a.b;
in
let
  b = 1;
in
x
---
[collapsible_let_in] Warning: These let-in expressions are collapsible
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ ╭───▶ let
   ┆ ┆     
 4 │ │ ╭─▶ let
   ┆ ┆ ┆   
 7 │ │ ├─▶ x
   │ │ │   │   
   │ │ ╰─────── This let in expression is nested
   │ │     │   
   │ ╰─────┴─── This let in expression contains a nested let in expression
───╯
