bin/tests/snapshots/collapsible_let_in__2e638014232f7dec2606c940ad2e97f6_lint_errfmt.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = a.b;
in
let
  b = 1;
in
x
---
<temp_file_path>>1:1:W:6:[collapsible_let_in] This `let in` expression contains a nested `let in` expression
<temp_file_path>>4:1:W:6:[collapsible_let_in] This `let in` expression is nested
