bin/tests/snapshots/collapsible_let_in__950e48dec6590cd20937e48006bff3f7_fix.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  a = 2;
  b = 3;
in
  let
    c = 5;
    d = 6;
  in
  a + b + c + d
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,9 +1,8 @@
 let
   a = 2;
   b = 3;
-in
-  let
+
     c = 5;
     d = 6;
   in
   a + b + c + d
