bin/tests/snapshots/collapsible_let_in__950e48dec6590cd20937e48006bff3f7_lint_errfmt.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  a = 2;
  b = 3;
in
  let
    c = 5;
    d = 6;
  in
  a + b + c + d
---
<temp_file_path>>1:1:W:6:[collapsible_let_in] This `let in` expression contains a nested `let in` expression
<temp_file_path>>5:3:W:6:[collapsible_let_in] This `let in` expression is nested
