bin/tests/snapshots/collapsible_let_in__950e48dec6590cd20937e48006bff3f7_lint_json.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  a = 2;
  b = 3;
in
  let
    c = 5;
    d = 6;
  in
  a + b + c + d
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "collapsible_let_in",
      "note": "These let-in expressions are collapsible",
      "code": 6,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 9,
              "column": 16
            }
          },
          "message": "This `let in` expression contains a nested `let in` expression",
          "suggestion": null,
          "fixable": false
        },
        {
          "at": {
            "from": {
              "line": 5,
              "column": 3
            },
            "to": {
              "line": 9,
              "column": 16
            }
          },
          "message": "This `let in` expression is nested",
          "suggestion": {
            "at": {
              "from": {
                "line": 4,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 6
              }
            },
            "fix": ""
          },
          "fixable": true
        }
      ]
    }
  ]
}
