bin/tests/snapshots/collapsible_let_in__950e48dec6590cd20937e48006bff3f7_lint_stderr.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  a = 2;
  b = 3;
in
  let
    c = 5;
    d = 6;
  in
  a + b + c + d
---
[06] Warning: These let-in expressions are collapsible
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ ╭───▶ let
   ┆ ┆     
 5 │ │ ╭─▶   let
   ┆ ┆ ┆   
 9 │ │ ├─▶   a + b + c + d
   │ │ │                 │   
   │ │ ╰───────────────────── This let in expression is nested
   │ │                   │   
   │ ╰───────────────────┴─── This let in expression contains a nested let in expression
───╯
