bin/tests/snapshots/collapsible_let_in__ec3d66168e4ffcb02f3a2c23ac1fa089_lint_stderr.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  inherit (foo) bar;
in
let
  bar = 1;
in
bar
---
