bin/tests/snapshots/collapsible_let_in__f40f57bb65dbbd0f124aec8bcb999f04_lint_errfmt.snap
---
source: bin/tests/collapsible_let_in.rs
---
{
  pkgs ? import <nixpkgs> { },
}:
let
  pkgs' = pkgs.extend (import ./overlay.nix);
in
let
  pkgs = pkgs';
in
pkgs
---
